<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Job.EditJobActivity"
    tools:showIn="@layout/app_bar_edit_job"
    android:background="@color/colorBackground">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/editJobTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/editJobTitle"/>
                <TextView
                    android:id="@+id/tvEmpName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvName"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/editJobTitle"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/tvCompanyName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvCompanyName"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvEmpName"
                    android:layout_marginLeft="25dp"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tvTitle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvCompanyName"
                    android:layout_marginLeft="25dp"/>
                <TextView
                    android:id="@+id/tvSalary"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/tvTitle"
                    android:layout_marginLeft="25dp"
                    android:text="@string/tvSalary"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/editEmpName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editJobTitle"
                    android:layout_toRightOf="@+id/tvEmpName"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/editCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editEmpName"
                    android:layout_toRightOf="@+id/tvCompanyName"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editCompanyName"
                    android:layout_toRightOf="@+id/tvTitle"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editSalary"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/etSalary"
                    android:inputType="number"
                    android:layout_below="@+id/editTitle"
                    android:layout_toRightOf="@+id/tvTitle"
                    android:layout_marginRight="25dp"/>

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvLocation"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/tvSalary"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:id="@+id/tvLatitude"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/tvLatitude"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/tvLocation"
                    android:layout_marginLeft="25dp"/>
                <TextView
                    android:id="@+id/tvLongitude"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/tvLongitude"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/tvLatitude"
                    android:layout_marginLeft="25dp"/>
                <EditText
                    android:id="@+id/editLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/etLatitude"
                    android:inputType="number"
                    android:layout_below="@+id/tvLocation"
                    android:layout_toRightOf="@+id/tvLatitude"
                    android:layout_marginRight="25dp"/>
                <EditText
                    android:id="@+id/editLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/etLongitude"
                    android:inputType="number"
                    android:layout_below="@+id/tvLatitude"
                    android:layout_toRightOf="@+id/tvLongitude"
                    android:layout_marginRight="25dp"/>

                <TextView
                    android:id="@+id/tvStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Do this job allow student to work?"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvLongitude"
                    android:layout_marginLeft="25dp"/>

                <RadioGroup
                    android:id="@+id/editRBJobStudent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_below="@+id/tvStudent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp">
                    <RadioButton
                        android:id="@+id/editYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Yes"
                        android:textColor="@color/black" />
                    <RadioButton
                        android:id="@+id/editNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="No"
                        android:checked="true"
                        android:textColor="@color/black" />
                </RadioGroup>
                <TextView
                    android:id="@+id/tvJobDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/tvJobDescription"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/editRBJobStudent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>

                <EditText
                    android:id="@+id/editJobDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etJobDescription"
                    android:inputType="textMultiLine"
                    android:layout_below="@+id/tvJobDescription"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>

                <TextView
                    android:id="@+id/tvJobRequirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:baselineAligned="false"
                    android:text="@string/tvJobRequirements"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/editJobDescription"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>


                <EditText
                    android:id="@+id/editJobRequirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etJobRequirements"
                    android:inputType="textMultiLine"
                    android:layout_below="@+id/tvJobRequirements"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>

                <Button
                    android:id="@+id/btnEditJob"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorPrimary"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_below="@+id/editJobRequirements"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>