<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AdminDashboard.DisplayAdminDashboardUserDetailsActivity"
    tools:showIn="@layout/app_bar_display_admin_dashboard_user_details">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/displayActiveApplicantDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="Display Details"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvUserID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/displayActiveApplicantDetails"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="@string/tvUserID"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAdminDetailsID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/displayActiveApplicantDetails"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@+id/tvUserID"
                    android:layout_toRightOf="@+id/tvUserID"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUserID"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="@string/tvUserName"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/tvAdminDetailsUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUserID"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/tvUserName"
                    android:layout_toRightOf="@+id/tvUserName"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:text="@string/tvEmail"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvUserName"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/tvAdminDetailsEmail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:text="yewtungcheong@hotmail.com"
                    android:layout_below="@+id/tvUserName"
                    android:layout_toRightOf="@+id/tvEmail"
                    android:layout_toEndOf="@+id/tvEmail"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvAge"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvEmail"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvAdminDetailsAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvEmail"
                    android:layout_toRightOf="@+id/tvAge"
                    android:layout_toEndOf="@+id/tvAge"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvPhone"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvAge"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvAdminDetailsPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvAge"
                    android:layout_toRightOf="@+id/tvPhone"
                    android:layout_toEndOf="@+id/tvPhone"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvStudent"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Student :"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvPhone"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvAdminDetailsStu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvPhone"
                    android:layout_toRightOf="@+id/tvStudent"
                    android:layout_toEndOf="@+id/tvStudent"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/btnAdminDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:text="Delete"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/tvAdminDetailsStu"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>